fixed gap between playlist bar and progress bar for high res 1440p

--- a/app/components/Video/Video.scss
+++ b/app/components/Video/Video.scss
@@ -37,7 +37,7 @@ $videotoplevel-bg: #171717;
 }
 }
 
-@media (min-height: 2000px) {
+@media (min-height: 1920px) {
 #player-size {
   height: 86vh; //any less/more will cause black bars on most videos instead of a few (when video is playing only).
   width: 100%;
